--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
 
   admin:
     build: .
-    image: admin
+    image: fast_admin
     container_name: ad
     restart: always
     command: uvicorn web.app:app --host 0.0.0.0 --port 8002 --reload
@@ -45,7 +45,7 @@ services:
 
   celery:
     build: .
-    image: celery_fast
+    image: fast_celery
     container_name: cla
     restart: always
     command: celery -A instruments.tasks:app worker --loglevel=info --pool=solo
