--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     ports:
       - "6380:6379"
     volumes:
-      - redis_data:/data  \
+      - redis_data:/data
 
   celery:
     build: .
